--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2,26 +2,26 @@
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 ;
 
-// body {
-//   background: $primary-background;
-//   display: grid;
-//   grid-template-columns: 1fr 4fr;
-//   grid-template-areas:
-//   "header header"
-//   "aside main"
-//   "aside main";
-//   height: 100vh;
-//   width: auto;
-// }
+body {
+  background: $primary-background;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-areas:
+  "header header"
+  "aside main"
+  "aside main";
+  height: 100vh;
+  width: auto;
+}
 
-// header {
-//   grid-area: header;
-// }
+header {
+  grid-area: header;
+}
 
-// aside {
-//   grid-area: aside;
-// }
+aside {
+  grid-area: aside;
+}
 
-// main {
-//   grid-area: main;
-// }
+main {
+  grid-area: main;
+}
