--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -21,16 +21,26 @@ body {
 // HEADER
 header {
   grid-area: header;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
+// SIDEBAR
 aside {
   grid-area: aside;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+// TRIP FORM
 form {
   grid-area: form;
+  display: 
 }
 
+// ALL DESTINATIONS
 main {
   grid-area: main;
 }
