--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -36,6 +36,12 @@ aside {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  overflow:auto;
+}
+
+.trips-box {
+  width: 100%;
+  height: 300px;
 }
 
 // TRIP FORM
