--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2,14 +2,27 @@
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 ;
 
+@mixin displayFlex($flex-direction, $align-items, $justify-content) {
+  display: flex;
+  flex-direction: $flex-direction;
+  align-items: $align-items;
+  justify-content: $justify-content;
+ 
+}
+
 * {
   border: 1px solid red;
+}
+.stacked {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
   // background: $primary-background;
   display: grid;
-  // grid-template-columns: 1fr fr;
+  grid-template-columns: 1fr 1.5fr;
   grid-template-areas:
   "header header"
   "aside form"
@@ -42,6 +55,9 @@ aside {
 .trips-box {
   width: 100%;
   height: 300px;
+  display: flex;
+  flex-direction: column;
+  overflow:scroll;
 }
 
 // TRIP FORM
@@ -59,4 +75,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.destinations-wrapper {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
