--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -13,6 +13,7 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 * {
   border: 1px solid red;
 }
+
 .stacked {
   display: flex;
   flex-direction: column;
@@ -82,4 +83,11 @@ main {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+}
+
+.destinations-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
