--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -53,7 +53,7 @@ aside {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  overflow:scroll;
+  overflow-y:scroll;
   grid-row: 2 / 5;
   background-color: #407899;
   border-bottom: 3px solid black;
@@ -65,14 +65,33 @@ aside {
   height: 400px;
   display: flex;
   flex-direction: column;
+  // align-items:center;
   background-color: #FFFFF2;
-  // overflow:scroll;
+  overflow-y:scroll;
 }
 
 .trips {
   border-bottom: 3px solid black;
 }
 
+.trips-card {
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  border: 1px solid black;
+}
+
+.trip-img {
+  // max-height: 100%;
+  // max-width: 25%;
+  height: 100%;
+  width: 100%;
+  grid-row: 1 / 3;
+  grid-column: 1 / 2; 
+}
 // TRIP FORM
 form {
   grid-area: form;
@@ -107,7 +126,7 @@ main {
   background-color: #FFFFF2;
 }
 
-.destinations-box {
+.destinations-card {
   display: flex;
   flex-direction: column;
   align-items: center;
