Display present trips and display if none

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -85,6 +85,10 @@ aside {
   border: 1px solid black;
 }
 
+.no-trips-card  {
+  text-align: center;
+}
+
 .trip-img {
   // max-height: 100%;
   // max-width: 25%;
