--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -21,19 +21,24 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
   align-items: center;
 }
 
+// html {
+//   height: 100%;
+// }
+
 body {
   // background: $primary-background;
   display: grid;
   grid-template-columns: 1fr 1.5fr;
-  // grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 20% 30% 50%;
   grid-template-areas:
   "header header"
   "aside form"
   "aside main";
   height: 100vh;
-  width: auto;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  // overflow: hidden;
 }
 
 // HEADER
@@ -55,7 +60,7 @@ aside {
   align-items: center;
   justify-content: space-around;
   overflow-y:scroll;
-  grid-row: 2 / 5;
+  // grid-row: 2 / 5;
   background-color: #407899;
   border-bottom: 3px solid black;
   border-right: 1px solid black;
@@ -73,6 +78,11 @@ aside {
 
 .trips {
   border-bottom: 3px solid black;
+  margin-top: 5px;
+}
+
+.trip-name {
+  margin: 2px;
 }
 
 .trips-card {
@@ -87,6 +97,7 @@ aside {
 
 .no-trips-card  {
   text-align: center;
+  // height: 100%;
 }
 
 .trip-img {
@@ -127,8 +138,11 @@ main {
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  padding: 5px;
   background-color: #FFFFF2;
+  overflow: scroll;
 }
 
 .destinations-card {
@@ -137,6 +151,7 @@ main {
   align-items: center;
   justify-content: space-around;
   background-color: #DE6449;
+  height: 1fr;
   
   
 }
