--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -93,6 +93,7 @@ aside {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   border: 1px solid black;
+  background-color: #DE6449
 }
 
 .no-trips-card  {
@@ -151,7 +152,8 @@ main {
   align-items: center;
   justify-content: space-around;
   background-color: #DE6449;
-  height: 1fr;
+  border: solid 2px black;
+  background-color: #DE6449
   
   
 }
