--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -113,7 +113,7 @@ aside {
 form {
   grid-area: form;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: space-around;
   grid-row: 2 / 3;
@@ -142,6 +142,10 @@ form {
 
 .form-message {
   margin-top: 0;
+}
+
+.p-tag{
+  
 }
 
 // ALL DESTINATIONS
