--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -12,7 +12,7 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 
 * {
   // border: 1px solid red;
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Architects Daughter', cursive;;
 }
 
 .stacked {
@@ -28,8 +28,8 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 body {
   // background: $primary-background;
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
-  grid-template-rows: 15% 30% 55%;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 15% 33% 52%;
   grid-template-areas:
   "header header"
   "aside form"
@@ -47,11 +47,25 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #DE6449;
+  background-color: #AAADC4;
+  // background-color: #DE6449;
   border-bottom: 3px solid black;
   
 }
 
+.title{
+  margin-right: 5%
+}
+
+.quote {
+  margin: 0;
+  // margin-left: 10%;
+  white-space: nowrap;
+}
+
+.img-quote {
+  margin-left: 5%;
+}
 // SIDEBAR
 aside {
   grid-area: aside;
@@ -73,7 +87,7 @@ aside {
   flex-direction: column;
   // align-items:center;
   background-color: #FFFFF2;
-  overflow-y:scroll;
+  overflow-y:auto;
 }
 
 .trips {
@@ -93,7 +107,12 @@ aside {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   border: 1px solid black;
-  background-color: #DE6449
+  background-color: #C7EDE6;
+  height: 140px;
+}
+
+.trips-card p  {
+  margin-left: 10px;
 }
 
 .no-trips-card  {
@@ -104,11 +123,13 @@ aside {
 .trip-img {
   // max-height: 100%;
   // max-width: 25%;
-  height: 100%;
+  height: 90%;
   width: 100%;
   grid-row: 1 / 3;
   grid-column: 1 / 2; 
+  border: 2px solid black;
 }
+
 // TRIP FORM
 form {
   grid-area: form;
@@ -122,6 +143,7 @@ form {
 }
 
 .trip-request {
+  margin: 0;
   margin-bottom: 2px;
 }
 
@@ -141,7 +163,7 @@ form {
 }
 
 .form-message {
-  margin-top: 0;
+  margin: 0;
 }
 
 .err-msg {
@@ -155,6 +177,7 @@ main {
   flex-direction: column;
   align-items: center;
   // grid-row: 3 / 4;
+  // background-color: #AAADC4;
   background-color: #407899;
 }
 
@@ -169,7 +192,8 @@ main {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5px;
   padding: 5px;
-  background-color: #FFFFF2;
+  background-color: #8D909B;
+  background-color: #8D909B;
   overflow: scroll;
   border-top: 3px solid black;
 }
@@ -179,15 +203,14 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: #DE6449;
+  // background-color: #DE6449;
   border: solid 2px black;
-  background-color: #DE6449
-  
-  
+  background-color: #C7EDE6;
 }
 
 .destination-img {
-  max-height: 100%;
-  max-width: 100%;
+  height: 200px;
+  width: 200px;
+  
   border: 3px solid black;
 }
