--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -82,12 +82,13 @@ aside {
 
 .trips-box {
   width: 100%;
-  height: 400px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   // align-items:center;
   background-color: #FFFFF2;
-  overflow-y:auto;
+  overflow:auto;
+  border: 3px solid black;
 }
 
 .trips {
@@ -108,11 +109,13 @@ aside {
   grid-template-rows: repeat(2, 1fr);
   border: 1px solid black;
   background-color: #C7EDE6;
-  height: 140px;
+  // height: 90%;
 }
 
 .trips-card p  {
   margin-left: 10px;
+  margin-top: 8%;
+  margin-bottom: 10%;
 }
 
 .no-trips-card  {
@@ -123,7 +126,7 @@ aside {
 .trip-img {
   // max-height: 100%;
   // max-width: 25%;
-  height: 90%;
+  height: 100%;
   width: 100%;
   grid-row: 1 / 3;
   grid-column: 1 / 2; 
@@ -194,7 +197,7 @@ main {
   padding: 5px;
   background-color: #8D909B;
   background-color: #8D909B;
-  overflow: scroll;
+  overflow-y: auto;
   border-top: 3px solid black;
 }
 
@@ -209,8 +212,8 @@ main {
 }
 
 .destination-img {
-  height: 200px;
-  width: 200px;
+  height: 240px;
+  width: 240px;
   
   border: 3px solid black;
 }
