--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -10,6 +10,10 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
  
 }
 
+.hidden {
+  display: none!important;
+}
+
 * {
   // border: 1px solid red;
   font-family: 'Architects Daughter', cursive;;
@@ -27,7 +31,7 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 
 body {
   // background: $primary-background;
-  display: grid;
+  // display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 15% 33% 52%;
   grid-template-areas:
@@ -39,6 +43,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  display: block;
 }
 
 // HEADER
@@ -65,6 +70,7 @@ header {
 
 .img-quote {
   margin-left: 5%;
+  margin-bottom: 5px;
 }
 // SIDEBAR
 aside {
@@ -165,6 +171,10 @@ form {
   margin-bottom: 10px;
 }
 
+button {
+  background-color: #AAADC4;
+}
+
 .form-message {
   margin: 0;
 }
@@ -216,4 +226,43 @@ main {
   width: 240px;
   
   border: 3px solid black;
+}
+
+// LOGIN PAGE
+.login-page {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  border: 1px solid black;
+  height: 83%;
+  background-image: url('../images/clouds.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.login {
+  border: 1px solid black;
+  height: 20rem;
+  width: 50rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #C7EDE6;
+  transition: 300ms ease;
+  
+}
+
+
+.login-button {
+  height: 10%;
+  width: 10%;
+  margin-top: 5%;
+  background-color: #AAADC4;
+  transition: 300ms ease;
+}
+
+.login-button:hover {
+  transform: scale(1.5);
 }
