--- a/src/css/_sidebar.scss
+++ b/src/css/_sidebar.scss
@@ -1,4 +1,4 @@
-aside {
+.sidebar {
     grid-area: aside;
     @include displayFlex(column, center, space-around);
     background-color: $easter-blue;
