--- a/src/css/_sidebar.scss
+++ b/src/css/_sidebar.scss
@@ -30,13 +30,14 @@
     grid-template-rows: repeat(2, 1fr);
     border: 1px solid black;
     background-color: $aqua-blue;
-  }
   
-  .trips-card p  {
-    margin-left: 10px;
-    margin-top: 8%;
-    margin-bottom: 10%;
-  }
+    & p  {
+      margin-left: 10px;
+      margin-top: 8%;
+      margin-bottom: 10%;
+    }
+}
+  
   
   .no-trips-card  {
     text-align: center;
