--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -32,6 +32,142 @@
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  // display: block;
 }
 
+// MEDIA QUERIES
+  @media screen and (max-width: 1200px) {
+  .body {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "header header"
+    "aside aside"
+    "form form"
+    "main main";
+    @include setDimensions(100vh, auto);
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  .sidebar {
+    grid-area: aside;
+    order: 1;
+    @include displayFlex(column, center, space-around);
+    background-color: $easter-blue;
+    border-bottom: 3px solid black;
+    border-right: 1px solid black;
+  }
+
+  form {
+    grid-area: form;
+    @include displayFlex(row, center, space-around);
+    background-color: #FFFFF2;
+    border-bottom: 3px solid black;
+  }
+
+  .trips-box {
+    @include setDimensions(20%, 90%);
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFF2;
+    overflow:auto;
+    border: 3px solid black;
+  }
+
+  .trips-card {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    border: 1px solid black;
+    background-color: $aqua-blue;
+    @include setDimensions(100%, 100%);
+
+    & p  {
+      margin-left: 10px;
+      margin-top: 8%;
+      margin-bottom: 10%;
+    }
+  }
+
+  @media screen and (max-width: 930px) {
+    header {
+      grid-area: header;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: $pastel-purple;
+      border-bottom: 3px solid black;
+    
+      & :nth-child(1) { order: 1; }
+      & :nth-child(2) { order: 3; }
+      & :nth-child(3) { order: 2; }
+    }
+
+    .title{
+      margin-right: 0
+    }
+
+    .img-quote {
+      margin-left: 0;
+      margin-bottom: 0;
+    }
+
+    .destinations-wrapper {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      @include setDimensions(100%, 100%);
+      grid-gap: 5px;
+      padding: 5px;
+      background-color: #8D909B;
+      border-top: 3px solid black;
+      overflow-y: auto;
+    }
+
+    @media screen and (max-width: 600px) {
+      .trips-card {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        border: 1px solid black;
+        background-color: $aqua-blue;
+      
+        & p  {
+          margin-left: 10px;
+          margin-top: 8%;
+          margin-bottom: 10%;
+        }
+      }
+      
+    .trip-img {
+      @include setDimensions(100%, 100%);
+      grid-row: 1 / 2;
+      grid-column: 1 / 2; 
+      border: 2px solid black;
+    }
+
+    form {
+      grid-area: form;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #FFFFF2;
+      border-bottom: 3px solid black;
+    }
+    
+    @media screen and (max-width: 530px) {
+      .destinations-wrapper {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        @include setDimensions(100%, 100%);
+        grid-gap: 5px;
+        padding: 5px;
+        background-color: #8D909B;
+        border-top: 3px solid black;
+        overflow-y: auto;
+      }
+     }
+    }
+  }
+}
