--- a/src/css/_normalize.scss
+++ b/src/css/_normalize.scss
@@ -28,9 +28,9 @@
    * Render the `main` element consistently in IE.
    */
   
-  main {
-    display: block;
-  }
+  // main {
+  //   display: block;
+  // }
   
   /**
    * Correct the font size and margin on `h1` elements within `section` and
@@ -50,11 +50,11 @@
    * 2. Show the overflow in Edge and IE.
    */
   
-  hr {
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
-    overflow: visible; /* 2 */
-  }
+  // hr {
+  //   box-sizing: content-box; /* 1 */
+  //   height: 0; /* 1 */
+  //   overflow: visible; /* 2 */
+  // }
   
   /**
    * 1. Correct the inheritance and scaling of font size in all browsers.
